--- a/Main.storyboard
+++ b/Main.storyboard
@@ -3130,7 +3130,7 @@
     <inferredMetricsTieBreakers>
         <segue reference="0wo-f6-UjE"/>
         <segue reference="Klt-aO-3La"/>
-        <segue reference="6A8-Kk-las"/>
-        <segue reference="b8A-CD-rhQ"/>
+        <segue reference="M28-BR-HO4"/>
+        <segue reference="Qk9-TF-3w3"/>
     </inferredMetricsTieBreakers>
 </document>
